--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,40 @@
-
-
+.map-container.dark {
+	opacity: 0.8;
+}
+.select-location-header {
+	color: black;
+	position: absolute;
+	left: 50%;
+	top: 8%;
+	transform: translateX(-50%);
+	z-index: 1000;
+}
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
-.leaflet-container{
-  width: 100%;
-  height: 100%;
+.leaflet-container {
+	width: 100%;
+	height: 100%;
 }
 
-.map-container{
-  width: 100vw;
-  height: 100vh;
+.map-container {
+	width: 100vw;
+	height: 100vh;
 }
