--- a/src/Components/TowerControler.css
+++ b/src/Components/TowerControler.css
@@ -1,10 +1,10 @@
-
-.tower-controler{
-    height: 20vh;
-    width: 20vw;
-    position: absolute;
-    z-index: 100000;
-    top: 1vh;
-    right: 2vw;
-    background: #fff;
+.tower-controler {
+	height: fit-content;
+	padding-bottom: 5vh;
+	width: 20vw;
+	position: absolute;
+	z-index: 100000;
+	top: 1vh;
+	right: 2vw;
+	background: #fff;
 }
